Mapper om til hjemmelkoder definert i kabal-kodeverk: https://github.com/navikt/klage-kodeverk/blob/63cf85bba1fc202de66c9f19434238202326c0bc/src/main/kotlin/no/nav/klage/kodeverk/hjemmel/YtelseToHjemler.kt#L1242